--- a/styles/Settings.css
+++ b/styles/Settings.css
@@ -1,6 +1,3 @@
-
-
-
 .card {
     box-sizing: border-box;
 
@@ -30,17 +27,34 @@
     display: flex;
     justify-content: space-between;
     margin: auto;
-    width: 95%;
 }
 
 .wrapper {
+    width: 60%;
+    max-width: 366px;
+    margin: 10px auto;
+}
+
+.wrapper_width {
     width: 80%;
+    max-width: 531px;
     margin: 10px auto;
 }
 
 .appRange {
+    -webkit-appearance: none;
     width: 100%;
     margin: auto;
+    background: #FFD748;
+    border-radius: 10px;
+}
+
+.appRange::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    background: rgb(16, 73, 135);
+    width: 23px;
+    border-radius: 100%;
+    height: 23px;
 }
 
 .paramName {
