--- a/styles/Settings.css
+++ b/styles/Settings.css
@@ -105,3 +105,32 @@
 
     color: #FFFFFF;
 }
+
+.Direction__Text {
+    color: #FFFFFF;
+    text-shadow: 
+    -0   -2px 0   #242546,
+     0   -2px 0   #242546,
+    -0    2px 0   #242546,
+     0    2px 0   #242546,
+    -2px -0   0   #242546,
+     2px -0   0   #242546,
+    -2px  0   0   #242546,
+     2px  0   0   #242546,
+    -1px -2px 0   #242546,
+     1px -2px 0   #242546,
+    -1px  2px 0   #242546,
+     1px  2px 0   #242546,
+    -2px -1px 0   #242546,
+     2px -1px 0   #242546,
+    -2px  1px 0   #242546,
+     2px  1px 0   #242546,
+    -2px -2px 0   #242546,
+     2px -2px 0   #242546,
+    -2px  2px 0   #242546,
+     2px  2px 0   #242546,
+    -2px -2px 0   #242546,
+     2px -2px 0   #242546,
+    -2px  2px 0   #242546,
+     2px  2px 0   #242546;
+}
