--- a/styles/GameComponent.css
+++ b/styles/GameComponent.css
@@ -3,6 +3,7 @@
     display:'flex';
     height: 100vh;
     justify-content: 'space-around';
+    padding: 40px;
 }
 
 .Game__Field {
@@ -34,6 +35,7 @@
 
 .Object__Text {
     color: #FFFFFF;
+    font-size: 2rem;
     text-shadow: 
     -0   -2px 0   #242546,
      0   -2px 0   #242546,
@@ -62,14 +64,18 @@
 }
 
 
-.ObjectSort_1 {
+.ObjectSort {
     cursor: grab; 
-    width: 100px;
-    height: 100px;
+    width: 131px;
+    height: 131px;
     display: flex; 
     justify-content: center; 
     align-items: center;
     margin: 10px; 
+    
+}
+
+._11 {
     background-image: url('images/Object_11.png');
     position: relative;
     -webkit-background-size: 100%;
@@ -80,14 +86,7 @@
     background-size: 100%;
 }
 
-.ObjectSort_2 {
-    cursor: grab; 
-    width: 100px;
-    height: 100px;
-    display: flex; 
-    justify-content: center; 
-    align-items: center;
-    margin: 10px;
+._12 {
     background-image: url('images/Object_12.png');
     position: relative;
     -webkit-background-size: 100%;
@@ -98,14 +97,7 @@
     background-size: 100%;
 }
 
-.ObjectSort_3 {
-    cursor: grab; 
-    width: 100px;
-    height: 100px;
-    display: flex; 
-    justify-content: center; 
-    align-items: center;
-    margin: 10px; 
+._13 {
     background-image: url('images/Object_13.png');
     position: relative;
     -webkit-background-size: 100%;
