--- a/styles/Settings.css
+++ b/styles/Settings.css
@@ -1,4 +1,4 @@
-.card {
+.Card {
     box-sizing: border-box;
 
     border-radius: 40px;
@@ -11,7 +11,7 @@
     flex-direction: column;
 }
 
-.cardContent {
+.CardContent {
     background: white; 
     width: 95%; 
     height: 95%;
@@ -23,25 +23,25 @@
     align-items: center;
 }
 
-.options {
+.Options {
     display: flex;
     justify-content: space-between;
     margin: auto;
 }
 
-.wrapper {
+.Wrapper {
     width: 60%;
     max-width: 366px;
     margin: 10px auto;
 }
 
-.wrapper_width {
+.Wrapper_width {
     width: 80%;
     max-width: 531px;
     margin: 10px auto;
 }
 
-.appRange {
+.AppRange {
     -webkit-appearance: none;
     width: 100%;
     margin: auto;
@@ -49,7 +49,7 @@
     border-radius: 10px;
 }
 
-.appRange::-webkit-slider-thumb {
+.AppRange::-webkit-slider-thumb {
     -webkit-appearance: none;
     background: rgb(16, 73, 135);
     width: 23px;
@@ -57,11 +57,11 @@
     height: 23px;
 }
 
-.paramName {
+.ParamName {
     margin: 20px auto;
 }
 
-.selectedOrder {
+.SelectedOrder {
     background: #FFD748;
     border: none;
     border-radius: 20px;
@@ -74,7 +74,7 @@
     padding: 5px 20px;
 }
 
-.order {
+.Order {
     background: rgba(255, 215, 72, 0.56);
     border: none;
     border-radius: 20px;
